# relayer-smtp

./: .env.example  .gitignore  Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs  server.rs  smtp_client.rs  strings.rs
